# search_ads_optimization

./: README.md  Untitled.ipynb  pyproject.toml  requirements.txt
data/source/: keyword.csv
notebooks/: 02_model_backtest.py
src/: __init__.py  api.py  config.py
src/artifacts/: writer.py
src/curves/: __init__.py  base.py  hill_curve.py  log_curve.py
src/data/: aggregators.py  loaders.py  splitters.py
src/distributions/: __init__.py  base.py  gaussian.py  negative_binomial.py  zinb.py
src/metrics/: regression.py
src/models/: hierarchy.py  model_builder.py  pooling.py  predictor.py  trainer.py
src/segmentation/: __init__.py  pipeline.py  rfm.py  semantic.py  topic_intent.py
src/services/: backtest_service.py
tests/: test_backtest_end_to_end.py  test_clusterid_resilience.py  test_config_and_flow.py  test_outputs_contract.py  test_predictor_fallback.py  test_semantic_memory_refactor.py  test_smoke.py  test_v16_unseen_segment_fix.py  test_v17_topic_intent.py  test_v19_routing_fallback.py  test_v20_cluster_quality_fallback.py  test_writer_dataframe_truthiness.py
